# lab_06_multithreads

./: .gitignore  CMakeLists.txt  README.md
include/: calculateSHA.h  log.h  picosha2.h  task.h  task_log.h
sources/: main.cpp
